// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
<<<<<<< HEAD
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
=======
  tooltipPlacement="top"
/>
>>>>>>> 50b1130a3efd5cb00af5e3d33a48cf7c221f71f2
`;

exports[`Filter should render filter input with default placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <Icon
    className={undefined}
    name="talend-search"
  />
  <div
    className="form-group"
  >
    <FilterInput
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      id={undefined}
      onBlur={undefined}
      onFilter={undefined}
      onFocus={undefined}
      onToggle={undefined}
      placeholder="Filter"
      value={undefined}
    />
    <Action
      bsStyle="link"
      disabled={false}
<<<<<<< HEAD
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
=======
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      inProgress={false}
      label="Remove filter"
      onClick={undefined}
      tooltipPlacement="top"
    />
>>>>>>> 50b1130a3efd5cb00af5e3d33a48cf7c221f71f2
  </div>
</form>
`;

exports[`Filter should render filter input with given placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <Icon
    className={undefined}
    name="talend-search"
  />
  <div
    className="form-group"
  >
    <FilterInput
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      id={undefined}
      onBlur={undefined}
      onFilter={undefined}
      onFocus={undefined}
      onToggle={undefined}
      placeholder="find something"
      value={undefined}
    />
    <Action
      bsStyle="link"
      disabled={false}
<<<<<<< HEAD
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
=======
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      inProgress={false}
      label="Remove filter"
      onClick={undefined}
      tooltipPlacement="top"
    />
>>>>>>> 50b1130a3efd5cb00af5e3d33a48cf7c221f71f2
  </div>
</form>
`;

exports[`Filter should render highlighted filter 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
<<<<<<< HEAD
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
=======
  tooltipPlacement="top"
/>
>>>>>>> 50b1130a3efd5cb00af5e3d33a48cf7c221f71f2
`;

exports[`Filter should render id if provided 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id="toolbar-filter"
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
<<<<<<< HEAD
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
=======
  tooltipPlacement="top"
/>
>>>>>>> 50b1130a3efd5cb00af5e3d33a48cf7c221f71f2
`;

exports[`Filter should render only toggle icon 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
<<<<<<< HEAD
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
=======
  tooltipPlacement="top"
/>
>>>>>>> 50b1130a3efd5cb00af5e3d33a48cf7c221f71f2
`;
